Use type-specific maps for biome colors